--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@remix-run/react": "^1.2.1",
     "@remix-run/vercel": "^1.2.1",
+    "brotli-size": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.2.1"
