--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/app.css",
     "dev": "concurrently --names=\"css,rmx\" \"yarn dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/app.css"
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/app.css",
+    "postinstall": "remix setup node"
   }
 }
