--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "brotli-size": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.4",
     "remix": "^1.2.1"
   },
   "devDependencies": {
