--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@remix-run/react": "^1.2.1",
     "@remix-run/vercel": "^1.2.1",
     "brotli-size": "^4.0.0",
+    "content-type": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.2.1",
     "@remix-run/serve": "^1.2.1",
+    "@types/content-type": "^1.1.5",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.2",
