--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "remix-app-template",
   "description": "",
-  "license": "",
+  "license": "MIT",
   "dependencies": {
     "@remix-run/react": "^1.2.1",
     "@remix-run/vercel": "^1.2.1",
