--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "@remix-run/react": "^1.2.1",
     "@remix-run/vercel": "^1.2.1",
     "@supabase/supabase-js": "^1.31.0",
+    "autosize": "^5.0.1",
     "content-type": "^1.0.4",
     "dotenv": "^16.0.0",
+    "esbuild": "^0.14.38",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
+    "react-hot-toast": "^2.2.0",
     "remix": "^1.2.1",
     "zod": "^3.12.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.1",
     "@remix-run/serve": "^1.2.1",
+    "@types/autosize": "^4.0.1",
     "@types/content-type": "^1.1.5",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
