--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "dev": "concurrently --names=\"css,rmx\" \"yarn dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/app.css",
     "postinstall": "remix setup node"
+  },
+  "optionalDependencies": {
+    "esbuild-linux-64": "^0.14.38"
   }
 }
