--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
       "~/*": ["./app/*"]
     },
     "importsNotUsedAsValues": "error",
-
-    // Remix takes care of building everything in `remix build`.
-    "noEmit": true
+    "noEmit": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": true
   }
 }
