--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "@remix-run/react": "^1.2.1",
     "@remix-run/vercel": "^1.2.1",
     "@supabase/supabase-js": "^1.31.0",
+    "@types/pg": "^8.6.5",
     "autosize": "^5.0.1",
     "content-type": "^1.0.4",
+    "cron-validate": "^1.4.3",
     "dotenv": "^16.0.0",
     "esbuild": "^0.14.38",
+    "pg": "^8.7.3",
+    "pg-connection-string": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
     "react-hot-toast": "^2.2.0",
     "remix": "^1.2.1",
+    "remix-utils": "^3.3.0",
     "zod": "^3.12.0"
   },
   "devDependencies": {
