--- a/package.json
+++ b/package.json
@@ -6,23 +6,31 @@
   "dependencies": {
     "@babel/core": "^7.17.10",
     "@babel/preset-typescript": "^7.16.7",
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@reach/portal": "^0.17.0",
     "@remix-run/react": "^1.2.1",
     "@remix-run/vercel": "^1.2.1",
     "@supabase/supabase-js": "^1.31.0",
     "@types/pg": "^8.6.5",
+    "@zag-js/dialog": "^0.1.7",
+    "@zag-js/react": "^0.1.8",
     "autosize": "^5.0.1",
     "content-type": "^1.0.4",
     "cron-validate": "^1.4.3",
+    "dedent": "^0.7.0",
     "dotenv": "^16.0.0",
     "esbuild": "^0.14.38",
     "pg": "^8.7.3",
     "pg-connection-string": "^2.5.0",
+    "prismjs": "^1.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
     "react-hot-toast": "^2.2.0",
     "remix": "^1.2.1",
     "remix-utils": "^3.3.0",
+    "tiny-invariant": "^1.2.0",
     "zod": "^3.12.0"
   },
   "devDependencies": {
@@ -31,6 +39,8 @@
     "@types/autosize": "^4.0.1",
     "@types/babel__core": "^7.1.19",
     "@types/content-type": "^1.1.5",
+    "@types/dedent": "^0.7.0",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.2",
