--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/app.css",
     "dev": "concurrently --names=\"css,rmx\" \"yarn dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/app.css",
-    "postinstall": "remix setup node"
+    "postinstall": "remix setup node",
+    "type-check": "tsc --noEmit"
   }
 }
