--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@zag-js/editable": "^0.1.12",
     "@zag-js/react": "^0.1.8",
     "autosize": "^5.0.1",
+    "codemirror": "5",
     "content-type": "^1.0.4",
     "cron-validate": "^1.4.3",
     "cuid": "^2.1.8",
@@ -28,6 +29,7 @@
     "pg-connection-string": "^2.5.0",
     "prismjs": "^1.28.0",
     "react": "^17.0.2",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
     "react-hot-toast": "^2.2.0",
@@ -43,6 +45,7 @@
     "@remix-run/serve": "^1.2.1",
     "@types/autosize": "^4.0.1",
     "@types/babel__core": "^7.1.19",
+    "@types/codemirror": "^5.60.5",
     "@types/content-type": "^1.1.5",
     "@types/dedent": "^0.7.0",
     "@types/prismjs": "^1.26.0",
