--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mitt": "^3.0.0",
     "pg": "^8.7.3",
     "pg-connection-string": "^2.5.0",
+    "plaiceholder": "^2.5.0",
     "prismjs": "^1.28.0",
     "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
@@ -35,7 +36,9 @@
     "react-hot-toast": "^2.2.0",
     "remix": "^1.2.1",
     "remix-utils": "^3.3.0",
+    "sharp": "^0.31.0",
     "slugify": "^1.6.5",
+    "tailwindcss-hocus": "^0.0.2",
     "tiny-invariant": "^1.2.0",
     "zod": "^3.12.0",
     "zustand": "^4.0.0-rc.1"
