--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.4",
     "react-hot-toast": "^2.2.0",
+    "reading-time": "^1.5.0",
     "remix": "^1.2.1",
     "remix-utils": "^3.3.0",
     "sharp": "^0.31.0",
