--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "pg-connection-string": "^2.5.0",
     "plaiceholder": "^2.5.0",
     "prismjs": "^1.28.0",
-    "react": "^17.0.2",
+    "react": "18",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "18",
     "react-dropzone": "^12.0.4",
     "react-hot-toast": "^2.2.0",
     "reading-time": "^1.5.0",
