--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autosize": "^5.0.2",
     "cron-validate": "^1.4.5",
     "cuid": "^2.1.8",
+    "dracula-prism": "^2.1.13",
     "esbuild": "^0.15.18",
     "pg": "^8.8.0",
     "pg-connection-string": "^2.5.0",
@@ -39,6 +40,7 @@
     "solid-js": "^1.6.2",
     "solid-start": "^0.2.7",
     "solid-start-vercel": "^0.2.7",
+    "solid-toast": "^0.3.5",
     "tiny-invariant": "^1.3.1",
     "undici": "^5.11.0",
     "zod": "^3.19.1",
