--- a/package.json
+++ b/package.json
@@ -7,44 +7,47 @@
   },
   "type": "module",
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.1.6",
-    "@types/babel__core": "^7.1.20",
-    "@types/pg": "^8.6.5",
+    "@iconify-json/heroicons": "^1.1.8",
+    "@types/babel__core": "^7.20.0",
+    "@types/pg": "^8.6.6",
     "@types/prismjs": "^1.26.0",
-    "autoprefixer": "^10.4.12",
-    "daisyui": "^2.42.1",
-    "postcss": "^8.4.18",
-    "solid-start-node": "^0.2.0",
-    "tailwindcss": "^3.2.0",
+    "autoprefixer": "^10.4.13",
+    "daisyui": "^2.47.0",
+    "postcss": "^8.4.21",
+    "solid-start-node": "^0.2.16",
+    "tailwindcss": "^3.2.4",
     "tailwindcss-hocus": "^0.0.7",
-    "typescript": "^4.8.4",
-    "unplugin-icons": "^0.14.14",
-    "vite": "^3.1.8"
+    "typescript": "^4.9.4",
+    "unplugin-icons": "^0.15.1",
+    "vite": "^3.2.5"
   },
   "dependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.20.12",
     "@babel/preset-typescript": "^7.18.6",
-    "@solidjs/meta": "^0.28.0",
-    "@solidjs/router": "^0.5.0",
+    "@solidjs/meta": "^0.28.2",
+    "@solidjs/router": "^0.7.0",
+    "@soorria/solid-dropzone": "^0.0.5",
+    "attr-accept": "^2.2.2",
     "autosize": "^5.0.2",
     "cron-validate": "^1.4.5",
     "cuid": "^2.1.8",
     "dracula-prism": "^2.1.13",
-    "esbuild": "^0.15.18",
+    "esbuild": "^0.17.3",
+    "file-selector": "^0.6.0",
     "pg": "^8.8.0",
     "pg-connection-string": "^2.5.0",
     "plaiceholder": "^2.5.0",
     "prismjs": "^1.29.0",
     "reading-time": "^1.5.0",
     "slugify": "^1.6.5",
-    "solid-js": "^1.6.2",
-    "solid-start": "^0.2.7",
-    "solid-start-vercel": "^0.2.7",
-    "solid-toast": "^0.3.5",
+    "solid-js": "^1.6.9",
+    "solid-start": "^0.2.16",
+    "solid-start-vercel": "^0.2.16",
+    "solid-toast": "^0.4.0",
     "tiny-invariant": "^1.3.1",
-    "undici": "^5.11.0",
-    "zod": "^3.19.1",
-    "zustand": "^4.1.5"
+    "undici": "^5.15.1",
+    "zod": "^3.20.2",
+    "zustand": "^4.3.2"
   },
   "engines": {
     "node": ">=16"
