--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@reach/portal": "^0.17.0",
-    "@remix-run/react": "^1.2.1",
-    "@remix-run/vercel": "^1.2.1",
+    "@remix-run/node": "^2.8.1",
+    "@remix-run/react": "^2.8.1",
+    "@remix-run/v1-meta": "^0.1.3",
     "@supabase/supabase-js": "^1.31.0",
     "@types/pg": "^8.6.5",
     "@zag-js/dialog": "^0.1.7",
@@ -35,7 +36,7 @@
     "react-dropzone": "^12.0.4",
     "react-hot-toast": "^2.2.0",
     "reading-time": "^1.5.0",
-    "remix": "^1.2.1",
+    "remix": "^2.8.1",
     "remix-utils": "^3.3.0",
     "sharp": "^0.31.0",
     "slugify": "^1.6.5",
@@ -45,8 +46,8 @@
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.2.1",
-    "@remix-run/serve": "^1.2.1",
+    "@remix-run/dev": "^2.8.1",
+    "@remix-run/serve": "^2.8.1",
     "@types/autosize": "^4.0.1",
     "@types/babel__core": "^7.1.19",
     "@types/codemirror": "^5.60.5",
@@ -72,7 +73,6 @@
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/app.css",
     "dev": "concurrently --names=\"css,rmx\" \"yarn dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/app.css",
-    "postinstall": "remix setup node",
-    "type-check": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   }
 }
