--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@heroicons/react": "^2.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@reach/portal": "^0.18.0",
-    "@remix-run/node": "^2.9.0",
-    "@remix-run/react": "^2.9.0",
-    "@remix-run/serve": "^2.9.0",
+    "@remix-run/node": "^2.9.1-pre.0",
+    "@remix-run/react": "^2.9.1-pre.0",
+    "@remix-run/serve": "^2.9.1-pre.0",
     "@remix-run/v1-meta": "^0.1.3",
     "@zag-js/dialog": "^0.48.0",
     "@zag-js/editable": "^0.48.0",
@@ -51,6 +51,8 @@
   "devDependencies": {
     "@remix-run/dev": "^2.9.0",
     "@types/autosize": "^4.0.3",
+    "@types/babel__core": "^7.20.5",
+    "@types/content-type": "^1.1.8",
     "@types/pg": "^8.11.5",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
